--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ drivers/python/rethinkdb/docs.py
 drivers/python/ql2.proto
 scripts/cluster_directory_*
 packaging/ami/build-ami-files/static-web
+support/src
